@@ -1,3 +1,13 @@
+2007-12-05  Janne Jalkanen <jalkanen@ecyrd.com>
+
+        * 2.6.0 RC1
+        
+        * [JSPWIKI-55]: Added patch from David Au to fix pages
+        with spaces.
+        
+        * [JSPWIKI-62]: Added patch from David Au to fix ShortURLConstructor
+        and plain.jsp.
+
 2007-12-10  Dirk Frederickx (dirk.frederickx@gmail.com)
 
         * Added selenium-core (selenium.core.version=0.8.3, selenium.core.revision=1879)
@@ -6,10 +16,9 @@
 
         * Added first set of web unit tests based on Selenium.
         Read the tests/selenium-tests/readme.txt for more instructions how to 
-        run them manually. Automated testruns from ant still need to be setup.
-        
+        run them manually. Automated testruns from ant still need to be setup.        
  
-2007-11-25  Janne Jalkanen <jalkanen@ecyrd.com>
+2007-12-05  Janne Jalkanen <jalkanen@ecyrd.com>
 
         * 2.5.166
 
